# syntex

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE-PROCESS.md
hello_world/: Cargo.toml  build.rs
hello_world/hello_world_macros/: Cargo.toml
hello_world/hello_world_macros/src/: lib.rs
hello_world/src/: hello_world.rs.syntex  lib.rs  main.rs  main.rs.in  main.rss
src/: lib.rs
syntex/: Cargo.toml
syntex/src/: error.rs  lib.rs  registry.rs  resolver.rs  squash_derive.rs  stack.rs
syntex_bitflags/: Cargo.toml
syntex_bitflags/src/: lib.rs
syntex_errors/: Cargo.toml
syntex_errors/src/: diagnostic.rs  emitter.rs  lib.rs  snippet.rs
syntex_fmt_macros/: Cargo.toml
syntex_fmt_macros/src/: lib.rs
syntex_pos/: Cargo.toml
syntex_pos/src/: hygiene.rs  lib.rs  symbol.rs
syntex_syntax/: Cargo.toml
syntex_syntax/src/: abi.rs  ast.rs  ast_util.rs  attr.rs  codemap.rs  config.rs  diagnostic.rs  feature_gate.rs  fold.rs  json.rs  lib.rs  ptr.rs  symbol.rs  test.rs  tokenstream.rs  visit.rs
syntex_syntax/src/diagnostics/: macros.rs  metadata.rs
syntex_syntax/src/errors/: emitter.rs  mod.rs
syntex_syntax/src/errors/snippet/: mod.rs
syntex_syntax/src/ext/: asm.rs  base.rs  build.rs  decorator.rs  env.rs  expand.rs  hygiene.rs  placeholders.rs  quote.rs  source_util.rs
syntex_syntax/src/ext/deriving/: mod.rs
syntex_syntax/src/ext/deriving/generic/: mod.rs
syntex_syntax/src/ext/tt/: macro_parser.rs  macro_rules.rs  quoted.rs
syntex_syntax/src/parse/: attr.rs  mod.rs  parser.rs  token.rs
syntex_syntax/src/parse/lexer/: comments.rs  mod.rs
syntex_syntax/src/print/: pp.rs  pprust.rs
syntex_syntax/src/rustc_data_structures/: blake2b.rs  indexed_vec.rs  leb128.rs  mod.rs  stable_hasher.rs
syntex_syntax/src/util/: lev_distance.rs  move_map.rs  parser_testing.rs  small_vector.rs  thin_vec.rs
