[package]
name = "syntex"
version = "0.30.0"
authors = [ "erick.tryzelaar@gmail.com" ]
license = "MIT/Apache-2.0"
description = "A library that enables compile time syntax extension expansion"
repository = "https://github.com/erickt/rust-syntex"
readme = "../README.md"

[dependencies]
syntex_syntax = { version = "^0.30.0", path = "../syntex_syntax" }
