[package]
name = "syntex_errors"
version = "0.58.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of librustc_errors"
repository = "https://github.com/serde-rs/syntex"
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
libc = "0.2"
rustc-serialize = "0.3"
syntex_pos = { version = "0.58", path = "../syntex_pos" }
term = "0.4"
unicode-xid = "0.1"
