[package]
name = "syntex_errors"
version = "0.58.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of librustc_errors"
repository = "https://github.com/serde-rs/syntex"
documentation = "https://docs.rs/syntex_errors"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
syntex_pos = { version = "0.58", path = "../syntex_pos" }
term = "0.4"
unicode-xid = "0.1"
