[package]
name = "syntex_pos"
version = "0.58.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax_pos"
repository = "https://github.com/serde-rs/syntex"
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
rustc-serialize = "0.3"
