[package]
name = "syntex_pos"
version = "0.59.0" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax_pos"
repository = "https://github.com/serde-rs/syntex"
documentation = "https://docs.rs/syntex_pos"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
