[package]
name = "syntex_syntax"
version = "0.34.0"
authors = [ "erick.tryzelaar@gmail.com" ]
license = "MIT/Apache-2.0"
description = "Export of libsyntax for code generation"
repository = "https://github.com/erickt/rust-syntex"
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
bitflags = "^0.5.0"
libc = "^0.2.2"
log = "^0.3.3"
rustc-serialize = "^0.3.16"
term = "^0.2.13"
unicode-xid = "^0.0.3"
